welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: value downto is not a member of Int
		for (g<- h downto 0 ) {
                           ^