welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
	var cpt = 0
	var h = getMondeHauteur() - 1
	var l = getMondeLargeur() - 1
	for (i<- 0 to l) {
		for (g<- h downto 0 ) {
			setPos(i,g)
			ecritMessage(cpt)
			cpt = cpt +1
		}
	}
	
	
	
}
